# API.yaml
@@ -9,6 +9,8 @@ tags:
     description: Entry operations
   - name: comment
     description: Comment operations
+  - name: employee
+    description: Employee operations
 paths:
   /api/users:
     post:
@@ -131,6 +133,139 @@ paths:
         - user
       summary: Delete user
       operationId: deleteUserByid
+      parameters:
+        - name: id
+          in: path
+          description: The user
+          required: true
+          schema:
+            type: integer
+      responses:
+        '400':
+          description: Invalid username supplied
+        '404':
+          description: User not found
+  /api/employees:
+    post:
+      tags:
+        - employee
+      summary: Create employee
+      operationId: createEmployee
+      requestBody: 
+        description: Created employee object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Employee'
+      responses:
+        '201':
+          description: successful operation
+          headers:
+            Location:
+              description: The location of the newly updeted employee
+              schema:
+                type: string
+                format: uri
+                example: '/user/{id}'
+        '415':
+          description: Unsupported Media Type
+        '500':
+          description: Server error
+    get:
+      tags:
+        - employee
+      summary: List employees
+      description: ''
+      operationId: getAllEmployees
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Employee'
+        '500':
+          description: Server error
+  /api/employees/name/{username}:
+    parameters:
+    - name: username
+      in: path
+      description: Username of the employee
+      required: true
+      schema:
+        type: string
+    get:
+      tags:
+        - employee
+      summary: Get employee info
+      description: ''
+      operationId: getEmployeeByUsername
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Employee'          
+        '400':
+          description: Invalid username supplied
+        '404':
+          description: User not found
+  /api/employees/{id}:
+    parameters:
+    - name: id
+      in: path
+      description: ID of the user
+      required: true
+      schema:
+        type: integer
+    get:
+      tags:
+        - employee
+      summary: Get user info
+      description: ''
+      operationId: getEmployeeById
+
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Employee'          
+        '400':
+          description: Invalid username supplied
+        '404':
+          description: User not found
+    put:
+      tags:
+        - employee
+      summary: Update employee
+      operationId: updateEmployeeById
+      requestBody:
+        description: Update an existent user
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Employee'
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Employee'          
+        '400':
+          description: Invalid username supplied
+        '404':
+          description: User not found
+    delete:
+      tags:
+        - employee
+      summary: Delete user
+      operationId: deleteEmployeeByid
       parameters:
         - name: id
           in: path
@@ -494,6 +629,34 @@ components:
           type: integer
         topics:
           type: array
+    Employee:
+      required:
+        - username
+        - email
+        - phone
+        - password
+        - role
+        - name
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 10
+        username:
+          type: string
+          example: theUser
+        email:
+          type: string
+          format: email
+          example: john@email.com
+        phone:
+          type: string
+          example: '12345'
+        name:
+          type: string
+          format: date
+        role: 
+          type: string
     Entry:
       required:
         - iduser
